--- a/Tools/text_encoder.html
+++ b/Tools/text_encoder.html
@@ -28,7 +28,7 @@
     </div>
     <br>
     <div>
-        <h3>Result</h3>
+        <h3>Decode</h3>
         <textarea id="result_output" rows="5" cols="50" placeholder="Encoded text will appear here"></textarea>
     </div>
 
