--- a/Tools/file_editer.html
+++ b/Tools/file_editer.html
@@ -16,10 +16,22 @@
         #download_button {
             margin-top: 20px;
         }
+        #filename_form {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <h2>File Content Viewer</h2>
+    <br>
+    <br>
+    <div id="filename_form">
+        <label for="filename">File Name:</label>
+        <input type="text" id="filename" placeholder="Enter file name">
+        <label for="extension">Extension:</label>
+        <input type="text" id="extension" placeholder="Enter extension">
+    </div>
+    <br>
     <input type="file" id="file_input" onchange="readFile()">
     <br>
     <textarea id="file_content" placeholder="File content will appear here"></textarea>
@@ -42,12 +54,16 @@
 
         function downloadFile() {
             var fileContent = document.getElementById('file_content').value;
+            var filename = document.getElementById('filename').value || 'edited_file';
+            var extension = document.getElementById('extension').value || 'txt';
+            var filenameWithExtension = filename + '.' + extension;
+            
             var blob = new Blob([fileContent], { type: 'text/plain' });
             var url = URL.createObjectURL(blob);
 
             var a = document.createElement('a');
             a.href = url;
-            a.download = 'edited_file.txt'; // ダウンロード時のファイル名を設定します
+            a.download = filenameWithExtension;
             a.click();
 
             URL.revokeObjectURL(url);
