--- a/inquiry.html
+++ b/inquiry.html
@@ -21,6 +21,6 @@
   <body>
     <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>お問い合わせ</h2>
-    <a href="Scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
+    <a href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
   </body>
 </html>
