--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -11,6 +11,7 @@
     <a href="./UNIXtoTIME.html">UnixTime to UTCTime</a><br>
     <a href="./Time_display.html">Time Display</a><br>
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
-    <a href="./text_encoder.html">text encoder/decoder</a>
+    <a href="./text_encoder.html">text encoder/decoder</a><br>
+    <a href="./file_editer.html">file editer</a><br>
   </body>
 </html>
