--- a/Test_file/Scratchapi.html
+++ b/Test_file/Scratchapi.html
@@ -5,28 +5,19 @@
   <title>Fetch APIでURL内容を表示</title>
 </head>
 <body>
-  <div id="result"></div>
-
   <script>
-    const url = 'https://api.scratch.mit.edu';
-
-    fetch(url)
-      .then(response => response.text())
-      .then(text => {
-        // 取得したデータを加工
-        const html = processData(text);
-
-        // HTMLに挿入
-        const resultElement = document.getElementById('result');
-        resultElement.innerHTML = html;
-      })
-      .catch(error => console.error(error));
-
-    function processData(text) {
-      // ここに、取得したデータを加工する処理を記述
-      // 例：不要な部分を削除したり、HTMLタグを追加したりする
-      return text;
-    }
+    $.ajax({
+      type: "GET",
+      url: "https://api.scratch.mit.edu", 
+      success: function(response) {
+        console.log(response);
+        window.alert(response)
+        location.reload();
+      },
+      error: function(error) {
+        console.error("失敗しました:", error);
+      }
+    });
   </script>
 </body>
 </html>
