--- a/Test_file/Scratchapi.html
+++ b/Test_file/Scratchapi.html
@@ -5,19 +5,21 @@
   <title>Fetch APIでURL内容を表示</title>
 </head>
 <body>
+  <div id="result"></div>
+
   <script>
-    $.ajax({
-      type: "GET",
-      url: "https://api.scratch.mit.edu", 
-      success: function(response) {
-        console.log(response);
-        window.alert(JSON.parse(response))
-        location.reload();
-      },
-      error: function(error) {
-        console.error("失敗しました:", error);
-      }
-    });
+    fetch('https://api.scratch.mit.edu')
+      .then(response => response.json()) // JSON形式で返ってくる場合
+      .then(data => {
+        // レスポンスデータを表示
+        const resultElement = document.getElementById('result');
+        resultElement.textContent = JSON.stringify(data, null, 2); // JSONを整形して表示
+      })
+      .catch(error => {
+        console.error('エラーが発生しました:', error);
+        // ユーザーにエラーメッセージを表示する（例：アラート、モーダルなど）
+        alert('データの取得に失敗しました。');
+      });
   </script>
 </body>
 </html>
