--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head></head>
-  <body><script>open("https://kouhei-1.github.io/Test_file/test2.html/");</script></body>
+  <body>
+    <script>
+      open("https://kouhei-1.github.io/Test_file/test2.html");
+    </script>
+  </body>
 </html>
