--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -3,7 +3,7 @@
   <head></head>
   <body>
     <script>
-      open("https://kouhei-1.github.io/Test_file/test2.html",blank);
+      open("https://kouhei-1.github.io/Test_file/test2.html","_blank");
     </script>
   </body>
 </html>
