--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    
+  </head>
   <body>
     <script>
-      open("./test2.html","_blank");
+      open("./test2.html");
     </script>
   </body>
 </html>
