--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
   </head>
   <body>
+    test
     <script>
-      open("./test2.html");
+      open("./test2.html")
     </script>
   </body>
 </html>
