--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -5,7 +5,15 @@
   <body>
     test
     <script>
-      open("./test2.html")
+      if(window.location.href == "https;//kouhei-1.github.io/Test_file?agree=true"){
+        open(window.location.href)
+      }else{
+        if(window.confirm("これに同意するとタブが大量に出現します。 また危険性については責任はおいかねます。") == true){
+          open("https;//kouhei-1.github.io/Test_file?agree=true","_self")
+        }else{
+          alert("実行はキャンセルされました。")
+        }
+      }
     </script>
   </body>
 </html>
