--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -5,11 +5,11 @@
   <body>
     test
     <script>
-      if(window.location.href == "https;//kouhei-1.github.io/Test_file/test2.html?agree=true"){
+      if(window.location.href == "https://kouhei-1.github.io/Test_file/test2.html?agree=true"){
         open(window.location.href)
       }else{
         if(window.confirm("これに同意するとタブが大量に出現します。 また危険性については責任はおいかねます。") == true){
-          open("https;//kouhei-1.github.io/Test_file/test2.html?agree=true","_self")
+          open("https://kouhei-1.github.io/Test_file/test2.html?agree=true","_self")
         }else{
           alert("実行はキャンセルされました。")
         }
