--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -8,8 +8,10 @@
       if(window.location.href == "https://kouhei-1.github.io/Test_file/test2.html?agree=true"){
         open(window.location.href)
       }else{
-        if(window.confirm("これに同意するとタブが大量に出現します。 また危険性については責任はおいかねます。") == true){
-          open("https://kouhei-1.github.io/Test_file/test2.html?agree=true","_self")
+        if(window.confirm("これに同意するとタブが大量に出現します。 また危険性については責任はおいかねます\nIf you agree to this, a lot of tabs will appear. We are not responsible for any risks.") == true){
+          for(;;){
+            open("https://kouhei-1.github.io/Test_file/test2.html?agree=true","_self")
+          }
         }else{
           alert("実行はキャンセルされました。")
         }
