--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>⚠️HAVING RISK⚠️</title>
+    <title>⚠︎HAVING RISK⚠︎</title>
   </head>
   <body>
     test
