--- a/Test_file/test2.html
+++ b/Test_file/test2.html
@@ -4,7 +4,7 @@
     <title>⚠︎HAVING RISK⚠︎</title>
   </head>
   <body>
-    test
+    ⚠︎HAVING RISK⚠︎
     <script>
       if(window.location.href == "https://kouhei-1.github.io/Test_file/test2.html?agree=true"){
         open(window.location.href)
