--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -13,5 +13,6 @@
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
     <a href="./text_encoder.html">text encoder/decoder</a><br>
     <a href="./file_editer.html">file editer</a><br>
+    <a href="./Earthquake_map">Japan 3D earthquake map</a><br>
   </body>
 </html>
