--- a/Tools/Tool_index.html
+++ b/Tools/Tool_index.html
@@ -12,7 +12,7 @@
     <a href="./Time_display.html">Time Display</a><br>
     <a href="./ChangeExtension.html">Change the extension(Only ext.)</a><br>
     <a href="./text_encoder.html">text encoder/decoder</a><br>
-    <a href="./file_editer.html">file editer</a><br>
+    <a href="./file_editor.html">file editer</a><br>
     <a href="../Earthquake_map">Japan 3D earthquake map</a><br>
   </body>
 </html>
