--- a/Tools/file_editor.html
+++ b/Tools/file_editor.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+    <a href="./Tool_index.html">Tools</a><br>
     <h2>File Content Viewer</h2>
     <br>
     <br>
