--- a/404.html
+++ b/404.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      
+    </style>
   </head>
   <body>
-    <img src="https://uploads.scratch.mit.edu/get_image/project/989841179_1000x800.png">
+    <h1>404 not found</h1>
+    申し訳ありませんが、あなたがアクセスしたURLは存在しないか削除されたようです。<br>
+    もしリンクがこのサイト内のものであるならば<a href="https://github.com/kouhei-1/kouhei-1.github.io/issues">issues</a>までお願いします
   </body>
+</html>
