--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     </style>
   </head>
   <body>
-    <h1>404 not found</h1>
+    <h1>404 not found</h1><br>
     申し訳ありませんが、あなたがアクセスしたURLは存在しないか削除されたようです。<br>
     もしリンクがこのサイト内のものであるならば<a href="https://github.com/kouhei-1/kouhei-1.github.io/issues">issues</a>までお願いします
   </body>
