--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="/kouhei-1.ico"/>
+    <link rel="icon" href="/favicon.ico"/>
     <title>kouhei-1 - top page</title>
     <meta charset = "utf-8">
     <link rel="stylesheet" href="home.css">
