--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1 class="home_bar"><a class="home_url" href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>'s homepage</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
-    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>
-    <h2>My projects</h2>
-    <br>
-    <h3> 私の作成中の作品</h3>
-    <iframe src="https://scratch.mit.edu/projects/914096393/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>    <br><br><br>
-    <h1 class="under_bar"><br><a class="under_url" href="inquiry.html">お問い合わせ</a><br><a class="under_url" href="projects.html">scratch projects</a><br><a class="under_url" href="https://kouhei-1.github.io/Tools/Tool_index.html">Tools</a><br><br></h1>
+    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br><br>
+    <h1 class="under_bar"><br>
+      <a class="under_url" href="inquiry.html">お問い合わせ</a><br>
+      <a class="under_url" href="projects.html">scratch projects</a><br>
+      <a class="under_url" href="https://kouhei-1.github.io/Tools/Tool_index.html">Tools</a><br><br>
+    </h1>
   </body>
 </html>
