--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br><br>
+    <h2>MY PROJECT:</h2><br>
+    <a href="https://scratch.mit.edu/projects/1049993145/">
+      <img src="https://uploads.scratch.mit.edu/get_image/project/1049993145_720x960.png">
+    </a><br>
     <h1 class="under_bar"><br>
       <a class="under_url" href="inquiry.html">お問い合わせ</a><br>
       <a class="under_url" href="projects.html">scratch projects</a><br>
