--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br><br>
     <h2>MY PROJECT:</h2><br>
     震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="https://kouhei-1.github.io/Earthquake_map">Earthquake map</a><br>
-    Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a>
+    Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a><br>
     <a href="https://scratch.mit.edu/projects/1049993145/">
       <img src="https://uploads.scratch.mit.edu/get_image/project/1049993145_360x480.png">
     </a><br>
