--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="/favicon.png"/>
     <title>kouhei-1 - top page</title>
     <meta charset = "utf-8">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   
   <body>
