--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <link rel="icon" href="/favicon.png"/>
-    <title>kouhei-1 - top page</title>
+    <title>kouhei-1</title>
     <meta charset = "utf-8">
     <link rel="stylesheet" href="/index.css">
   </head>
   
   <body>
-    <h1 class="top_title"><br>kouhei-1<br> </h1>
+    <h1 class="top_title">kouhei-1 home</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
     I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br><br>
     <h2>MY PROJECT:</h2><br>
     震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="/Earthquake_map">Earthquake map</a><br>
-    Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a><br>
+    Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a><br><br>
     <a href="https://scratch.mit.edu/projects/1049993145/">
       <img src="https://uploads.scratch.mit.edu/get_image/project/1049993145_360x480.png">
     </a><br>
