--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <h1 class="top_title">kouhei-1 home</h1>
     <br><br>
     <h2>ABOUT ME:</h2><br>
-    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br><br>
+    I am a scratcher.<br>My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>
+    I can code scratch(3.0), javascirpt, python, and some lang. (My best lang is scratch.)<br>
+    I often coding in scratch. sometime coding in github.io.
+
     <h2>MY PROJECT:</h2><br>
     震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="/Earthquake_map">Earthquake map</a><br>
     Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a><br><br>
