--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </a><br>
     <h1 class="under_bar"><br>
       <a class="under_url" href="inquiry.html">お問い合わせ</a><br>
-      <a class="under_url" href="https://kouhei-1.github.io/Tools/Tool_index.html">Tools</a><br><br>
+      <a class="under_url" href="/tool">Tools</a><br><br>
     </h1>
   </body>
 </html>
