--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
   <body>
     <h1>404 not found</h1><br>
     申し訳ありませんが、あなたがアクセスしたURLは存在しないか削除されたようです。<br>
-    もしリンクがこのサイト内のものであるならば<a href="https://github.com/kouhei-1/kouhei-1.github.io/issues">issues</a>までお願いします
+    もしリンクがこのサイト内のものであるならば<a href="https://github.com/kouhei-1/kouhei-1.github.io/issues">issues</a>までお願いします。
+    もしくは<a href="https://kouhei-1.github.io">トップページ</a>へ
   </body>
 </html>
