--- a/inquiry.html
+++ b/inquiry.html
@@ -11,10 +11,10 @@
       h3{
         font-family: sans-serif;
         background-color: black;
-        font-color: SkyBlue;
+        color: skyblue;
       }
-      a{
-        font-color: #ffffff;
+      .top_link{
+        color: #ffffff;
       } 
     </style>
   </head>
@@ -22,6 +22,6 @@
   <body>
     <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>お問い合わせ</h2>
-    <a href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
+    <a class="top_link" href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
   </body>
 </html>
