--- a/inquiry.html
+++ b/inquiry.html
@@ -8,20 +8,17 @@
         font-size:25px;
         font-family:sans-serif;
       }
-      h3{
+      .home{
         font-family: sans-serif;
         background-color: black;
         color: skyblue;
       }
-      .top_link{
-        color: #ffffff;
-      } 
     </style>
   </head>
   
   <body>
     <h3 class="home">  <a href = "index.html">ホーム</a></h3>
     <h2>お問い合わせ</h2>
-    <a class="top_link" href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
+    <a class="link" href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
   </body>
 </html>
