--- a/inquiry.html
+++ b/inquiry.html
@@ -6,18 +6,22 @@
     <style>
       h2{
         font-size:25px;
-        font-family:sans-serif;
+        font-family: sans-serif;
       }
       .home{
         font-family: sans-serif;
         background-color: black;
-        color: skyblue;
+        color: white;
+      }
+      .link{
+        color: black;
+        font-weight: bold;
       }
     </style>
   </head>
   
   <body>
-    <h3 class="home">  <a href = "index.html">ホーム</a></h3>
+    <h3>  <a href="index.html" class="home">ホーム</a></h3>
     <h2>お問い合わせ</h2>
     <a class="link" href="https://scratch.mit.edu/users/kouhei-1">私のScratchプロフィール</a>までお問い合わせ願います。
   </body>
