--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
       <a class="under_url" href="/tool">Tools</a><br><br>
     </h1>
   </body>
-  <!--このテキストでコミットさせます-->
+  <!--このテキストでコミットさせま-->
 </html>
