--- a/inquiry.html
+++ b/inquiry.html
@@ -4,6 +4,9 @@
     <link rel="icon" href="/favicon.png"/>
     <meta charset = "utf-8">
     <style>
+      body{
+        margin: 0;
+      }
       h3{
         background-color: black;
       }
