--- a/inquiry.html
+++ b/inquiry.html
@@ -13,6 +13,7 @@
       h2{
         font-size:25px;
         font-family: sans-serif;
+        margin: 0;
       }
       .home{
         font-family: sans-serif;
