--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
       <a class="under_url" href="https://github.com/kouhei-1/kouhei-1.github.io">Github</a><br><br>
     </h1>
   </body>
-  <!--このテキストでコミットさせま-->
+  <!--このテキストでコミットさせます！-->
 </html>
