--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1 class="under_bar"><br>
       <a class="under_url" href="inquiry.html">お問い合わせ</a><br>
       <a class="under_url" href="/tool">Tools</a><br>
-      <a class="under_url" href="https://github.com/kouhei-1/kouhei-1.github.io">Github</a><br><br>
+      <a class="under_url" href="https://github.com/kouhei-1">Github</a><br><br>
     </h1>
   </body>
   <!--このテキストでコミットさせます！-->
