--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>ABOUT ME:</h2><br>
       I am a scratcher.<br>
       My account is <a href="https://scratch.mit.edu/users/kouhei-1" target="_blank">kouhei-1</a>.<br>
-      I can code scratch(3.0), javascirpt, python, and a few lang. (My best lang is scratch.)<br>
+      I can code scratch(3.0), javascript, python, and a few lang. (My best lang is scratch.)<br>
       I often coding in scratch. sometime coding in github.io.<br><br>
       
       <h2>MY PROJECT:</h2><br>
