--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <h2>MY PROJECT:</h2><br>
     <p>
       震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="/Earthquake_map">Earthquake map</a><br>
-      Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/">クリック</a><br><br>
-      <a href="https://scratch.mit.edu/projects/1049993145/">
+      Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/" target="_blank">クリック</a><br><br>
+      <a href="https://scratch.mit.edu/projects/1049993145/" target="_blank">
       <img src="https://uploads.scratch.mit.edu/get_image/project/1049993145_360x480.png">
       </a>
     </p>
@@ -29,7 +29,7 @@
     <h1 class="under_bar"><br>
       <a class="under_url" href="inquiry.html">お問い合わせ</a><br>
       <a class="under_url" href="/tool">Tools</a><br>
-      <a class="under_url" href="https://github.com/kouhei-1">Github</a><br><br>
+      <a class="under_url" href="https://github.com/kouhei-1" target="_blank">Github</a><br><br>
     </h1>
   </body>
   <!--このテキストでコミットさせます！-->
