--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
     <h2>MY PROJECT:</h2><br>
     <p>
-      震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="/Earthquake_map">Earthquake map</a><br>
+      震源地を日本地図に3Dマッピング。 ※Github pages版はこちら -><a href="/Earthquake_map"  target="_blank">Earthquake map</a><br>
       Scratchのprojectを見たい方は画像を<a href="https://scratch.mit.edu/projects/1049993145/" target="_blank">クリック</a><br><br>
       <a href="https://scratch.mit.edu/projects/1049993145/" target="_blank">
       <img src="https://uploads.scratch.mit.edu/get_image/project/1049993145_360x480.png">
